Bug 1030599: Make hasUnaliasedDouble and hasMultiAlias inline rather than static; r=mjrosenb