js/src/jit/x86/Architecture-x86.h
@@ -218,13 +218,13 @@ struct FloatRegister {
 
 // Arm/D32 has double registers that can NOT be treated as float32
 // and this requires some dances in lowering.
-static bool hasUnaliasedDouble() {
+inline bool hasUnaliasedDouble() {
     return false;
 }
 
 // On ARM, Dn aliases both S2n and S2n+1, so if you need to convert a float32
 // to a double as a temporary, you need a temporary double register.
-static bool hasMultiAlias() {
+inline bool hasMultiAlias() {
     return false;
 }
 
